--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,13 +1,12 @@
-
 workflows:
   android_debug:
     name: Android Debug
+    max_build_duration: 45
+    instance_type: linux_x2
     environment:
-      android:
-        image: latest
       java: 17
     scripts:
       - chmod +x gradlew || true
-      - ./gradlew clean assembleDebug || gradle clean assembleDebug
+      - ./gradlew clean assembleDebug
     artifacts:
       - app/build/outputs/apk/debug/*.apk
