--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -15,15 +16,19 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '17'
           cache: 'gradle'
 
-      - name: Make gradlew executable
-        run: chmod +x gradlew
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
 
+      # Build using the hosted Gradle (no gradlew in repo needed)
       - name: Build debug APK
-        run: ./gradlew clean assembleDebug
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.7
+          arguments: clean assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
