--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,27 +8,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
           cache: 'gradle'
+      - uses: android-actions/setup-android@v3
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
-
-      # Build using the hosted Gradle (no gradlew in repo needed)
+      # Build without using GitHub cache (works during cache outages)
       - name: Build debug APK
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.7
           arguments: clean assembleDebug
+          cache-disabled: true
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
