--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,18 @@
-rootProject.name = 'PhoneMirroringByGPT5AndAdam'
-include ':app'
+rootProject.name = "PhoneMirroringByGPT5AndAdam"
+include(":app")
+
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
